<resources>

    <string name="app_name">"SimiDic"</string>
    <string name="app_version_name">"1.0.1"</string>
    <string name="app_full_name">"SimiDic 1.0.1"</string>
    <string name="ketanolab">"Ketanolab"</string>
    <string name="illa_a">"ILLA-A"</string>
    <!-- Titles -->
    <string name="favorites">"Starred"</string>
    <string name="dictionaries">"Dictionaries"</string>
    <string name="credits">"Credits"</string>
    <string name="downloads">"Downloads"</string>
    <string name="information">"Information"</string>
    <!-- MainActivity -->
    <string name="insert_word">"Type word"</string>
    <string name="download_dictionaries">"Is downloading dictionaries?"</string>
    <string name="you_dont_have_dictionaries">"Not have dictionaries installed on your device."</string>
    <string name="sd_required">"SD required"</string>
    <string name="you_dont_have_sd">"Not have an external memory installed, it requires to store SimiDic dictionaries."</string>
    <!-- DescargaActivity -->
    <string name="download_failed">"Download failed, try again."</string>
    <string name="downloaded">"Downloaded"</string>
    <string name="is_downloaded_or_downloading">"You select this download."</string>
    <string name="downloading">"Downloading ..."</string>
    <string name="load_completed">"Load completed"</string>
    <string name="no_internet">"Without Internet"</string>
    <string name="you_dont_have_conection">"Not have an Internet connection, you need to download dictionaries."</string>
    <string name="update">"Refresh"</string>
    <string name="loading">"Loading ..."</string>
    <string name="word">"Word"</string>
    <string name="meaning">"Meaning"</string>
    <string name="name">"Name"</string>
    <string name="author">"Author"</string>
    <string name="description">"Description"</string>
    <string name="size">"Size"</string>
    <string name="try_again">"Download failed, try again."</string>
    <string name="no_downloads">"No new dictionaries to download, please try later."</string>
    <!-- FavoritosActivity -->
    <string name="by">"by"</string>
    <!-- PalabraActivity -->
    <string name="favorite">"Starred"</string>
    <string name="favorite_now">"This word is now favorite."</string>
    <string name="no_favorite_now">"This word is no favorite."</string>
    <!-- AboutActivity -->
    <string name="present">"Presented ..."</string>
    <string name="licence">"Under GPL 3"</string>
    <string name="authors">"Based on dictionaries"</string>
    <string name="developer">"Developer"</string>
    <string name="linguist">"Linguist"</string>
    <string name="coordinator_and_graphics">"Coordinator and graphics"</string>
    <string name="producers">"Producers"</string>
    <string name="special_thanks">"Special Thanks"</string>
    <!--  Notifications  -->
    <string name="gcm_registered">From GCM: device successfully registered!</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="gcm_message">From GCM: you got message!</string>
    <string name="gcm_error">From GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">From Demo Server: successfully added device!</string>
    <string name="server_unregistered">From Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
    

</resources>