<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_dictionaries"
        android:icon="@drawable/ic_action_books"
        android:showAsAction="ifRoom"
        android:title="@string/dictionaries"/>
    <item
        android:id="@+id/menu_download"
        android:icon="@drawable/ic_action_download"
        android:showAsAction="ifRoom"
        android:title="@string/downloads"/>
    <item
        android:id="@+id/menu_favorites"
        android:icon="@drawable/ic_action_star_ok"
        android:showAsAction="ifRoom"
        android:title="@string/favorites"/>
    <item
        android:id="@+id/menu_information"
        android:icon="@drawable/ic_action_info"
        android:showAsAction="ifRoom"
        android:title="@string/credits"/>

</menu>