<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutSplash"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blanco1" >

    <ImageView
        android:id="@+id/imagenIlla"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="@dimen/margen"
        android:contentDescription="@string/ketanolab"
        android:paddingLeft="130dp"
        android:src="@drawable/logo_ketanolab_mini" />

    <ImageView
        android:id="@+id/imagenKetanolab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="@dimen/margen"
        android:contentDescription="@string/illa_a"
        android:paddingRight="130dp"
        android:src="@drawable/logo_illa_mini" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/margen"
        android:text="@string/app_full_name"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/negro1" />

</RelativeLayout>