<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blanco1" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textoPalabra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margen"
            android:text="@string/word"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/negro1"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textoSignificado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margen"
            android:layout_marginLeft="@dimen/margen"
            android:layout_marginRight="@dimen/margen"
            android:text="@string/meaning"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/negro1" />

        <TextView
            android:id="@+id/textoDiccionario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginBottom="@dimen/margen"
            android:layout_marginLeft="@dimen/margen"
            android:layout_marginRight="@dimen/margen"
            android:text="@string/author"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/negro2" />
    </LinearLayout>

</ScrollView>