<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/descargaImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/margen"
            android:layout_marginLeft="@dimen/margen"
            android:layout_marginTop="@dimen/margen"
            android:src="@drawable/ic_menu_download" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/nameItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margen"
            android:layout_marginRight="@dimen/margen"
            android:layout_marginTop="@dimen/margen"
            android:text="@string/name"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/negro1" />

        <TextView
            android:id="@+id/authorItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margen"
            android:layout_marginRight="@dimen/margen"
            android:text="@string/author"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/negro1" />

        <TextView
            android:id="@+id/descriptionItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margen"
            android:layout_marginLeft="@dimen/margen"
            android:layout_marginRight="@dimen/margen"
            android:text="@string/description"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/negro2" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margen"
            android:layout_marginLeft="@dimen/margen"
            android:layout_marginRight="@dimen/margen"
            android:max="100"
            android:progress="0"
            android:visibility="gone" />

        <TextView
            android:id="@+id/extraItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margen"
            android:layout_marginLeft="@dimen/margen"
            android:layout_marginRight="@dimen/margen"
            android:text="@string/size"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/negro1" />

    </LinearLayout>

</LinearLayout>